Fix page jump when file selected

--- a/src/_less/_objects.form.less
+++ b/src/_less/_objects.form.less
@@ -74,7 +74,7 @@
   height: 0;
   width: 0;
   opacity: 0;
-  position: absolute;
+  position: relative;
   right: 0;
   text-align: right;
   top: 0;
